--- a/style/quem-somos.css
+++ b/style/quem-somos.css
@@ -8,7 +8,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #DD5081;
+  background-image: linear-gradient(to right, rgb(221,80,189), rgb(220, 79, 128), rgb(201, 42, 96));
   color: white;
   overflow-y: auto
 }
